...
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/button_sign_in_kakao"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/button_sign_in_naver"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_button_kakao"
                android:clickable="true"
...


            <LinearLayout
                android:id="@+id/button_sign_in_twitter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/button_sign_in_google"
                android:background="@drawable/login_button_twitter"
                android:gravity="center"
                android:onClick="@{(v) -> viewModel.startSignIn(1003)}"
                android:orientation="horizontal">

                <ImageView
...
