...
                <RelativeLayout
                    android:id="@+id/relativelayout_main_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageview_main_top"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/gradient_main"
                        android:importantForAccessibility="no" />

                    <androidx.viewpager.widget.ViewPager
...
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@null"
                        android:importantForAccessibility="no"
                        android:src="@drawable/search" />

                    <ImageButton
                        android:id="@+id/image_button_main_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="20dp"
                        android:clickable="true"
...
