...

        <ImageButton
            android:id="@+id/image_button_notification_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
...

        <TextView
            android:id="@+id/textview_notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notification"
            android:textAlignment="center"
            android:textColor="@color/black"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_notification_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/linearlayout_notification_total_underline"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_notification_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/linearlayout_notification_notice_underline"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_notification_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/linearlayout_notification_share_underline"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_notification_docs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/linearlayout_notification_docs_underline"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_notification_inquiry"
                android:layout_width="wrap_content"
                android:clickable="true"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/linearlayout_notification_inquiry_underline"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
...

    <FrameLayout
        android:id="@+id/frame_layout_notification_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
